--- a/baobo_1.1.2.plist
+++ b/baobo_1.1.2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://47.106.208.185/baobo_1.1.2.ipa</string>
+					<string>https://raw.githubusercontent.com/appleaoxin/appleaoxin.github.io/master/baobo_1.1.2.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://47.106.208.185/baobo_1.1.2.png</string>
+					<string>https://raw.githubusercontent.com/appleaoxin/appleaoxin.github.io/master/baobo_1.1.2.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://47.106.208.185/baobo_1.1.2.png</string>
+					<string>https://raw.githubusercontent.com/appleaoxin/appleaoxin.github.io/master/baobo_1.1.2.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
